aplicado estilo à box banner

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,1 +1,26 @@
-<p>home works!</p>
+<main>
+    <section id="banner" class="banner">
+        <div class="box">
+            <h1>
+                <span class="title">Olá, seja bem-vindo!</span>
+                <span class="title2">Me chamo Jardel, estudante de programação com foco em desenvolvimento web.</span>
+            </h1>
+
+            <p class="paragraph">Conheça mais sobre mim, meus projetos e habilidades técnicas.</p>
+
+            <div class="buttons">
+                <a href="#about">
+                    <i class="material-symbols-outlined">mood</i>
+
+                    Sobre mim
+                </a>
+    
+                <a href="#skills">
+                    <i class="material-symbols-outlined">check_circle</i>
+                    Habilidades
+                </a>
+            </div>
+        </div>
+    </section>
+
+</main>
