--- a/src/styles.css
+++ b/src/styles.css
@@ -17,14 +17,16 @@
     --font-size-4: 1rem;
     --font-size-5: 0.75rem;
 
-    --color-blue-1: #1c95f9;
+    --color-blue-1: #15bcda;
     --color-blue-2: #296f97;
     --color-blue-3: #153d50;
     --color-blue-4: #2668866e;
+    --color-blue-5: #027e94;
 
     --color-pink-1: #f42771;
 
     --color-black-1: #181818;
+    ;
 
 
 }
