--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -23,4 +23,29 @@
         </div>
     </section>
 
+    <section id="about" class="container about">
+        <div class="box">
+            <div class="img">
+                <img src="./assets/imgs/foto.jpg"
+                alt="foto de Jardel">
+            </div>
+
+             <div class="text">
+            <h2>Sobre Mim</h2>
+
+            <h3>
+                Estudante de Análise e Desenvolvimento de Sistemas (ADS) na Unibalsas (Balsas - MA), com foco em desenvolvimento web.    
+            </h3>
+
+            <p>
+                Tenho experiência prática ao longo dos meus estudos em <b>Angular, JavaScript, TypeScript, HTML, CSS, C#, MySQL e ASP.NET</b>, 
+                aplicando conceitos aprendidos em projetos reais. Durante meus estudos, desenvolvi este portfólio utilizando <b>Angular</b>, 
+                aplicando boas práticas de desenvolvimento, organização de componentes e atenção à usabilidade, performance e experiência do usuário.
+                Busco ingressar na área de desenvolvimento, evoluir constantemente minhas habilidades, aprender novas tecnologias e trazer criatividade e dedicação para cada projeto que desenvolvo.
+            </p>
+        </div>
+        </div>
+       
+
+    </section>
 </main>
