--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -155,8 +155,78 @@
     margin-top: 15px ;
 }
 
+.projects .box h3 {
+    margin: 5px 0 20px;
+    padding: 0 15px;
+    font-size: var(--font-size-4);
+}
 
+.projects .box h2{
+    padding: 0 15px;
+}
 
+.projects .box .project {
+    display: flex;
+    flex-direction: column;
+    margin: 50px;
+  ;
+}
+
+.projects .box .project.reverse{
+    flex-direction: column-reverse;
+}
+
+.projects .box .project .img{
+    flex:1;
+    margin-bottom: 15px;
+}
+
+.projects .box .project .text{
+    flex: 1;
+    margin-bottom: 15px;
+}
+
+.projects .box .project .img img {
+    width: 100%
+}
+
+.projects h4 {
+    font-size:  var(--font-size-3);
+    margin-bottom: 15px;
+}
+
+.projects .box .project .text .buttons{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.projects .box .project .text .buttons a{
+    display: inline-flex;
+    border-radius: 45px;
+    color:#fff;
+    height: 30px;
+    background: #181616;
+    margin-right: 15px;
+    padding: 0 12px;
+    font-size: var(--font-size-5);
+    font-weight: 400;
+    align-items: center;
+    text-decoration: none;
+}
+
+.projects .box .project .text .buttons a.live{
+    background: var(--color-pink-1);
+}
+
+.projects .box .project .text .buttons a svg{
+    width: 25px;
+    margin-right: 5px;
+}
+
+.projects .box .project .text .buttons a i{
+    margin-right: 5px;
+}
 
 @media (min-width: 768px){
     .about .box{
@@ -187,5 +257,10 @@
     .skills .box .items .skill img, 
     .skills .box .items .skill img{
         width: 120px;
+    }
+
+    .projects .box .project,
+    .projects .box .project.reverse{
+        flex-direction: row;
     }
 }
