--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<div class="container footer">
+    <div class="box">
+        <p>© {{date.getFullYear()}} | Desenvolido em Angular por {{profile?.name}}.</p>
+    </div>
+
+</div>
